# MagicORM

./: Cargo.toml  README.md  TODO.md  test.db
magic/: Cargo.toml
magic/examples/: basic_usage.rs
magic/src/: lib.rs  main.rs  prelude.rs  registry.rs
magic/src/executor/: error.rs  mod.rs  traits.rs
magic/src/executor/adapters/: mod.rs  sqlite.rs
magic/src/meta/: column.rs  foreign_key.rs  mod.rs  model.rs
magic/src/model/: core.rs  descriptor.rs  meta.rs  mod.rs  registry.rs
magic/src/query/: builder.rs  executor.rs  methods.rs  mod.rs  model.rs
magic/src/query/eager/: builder.rs  executor.rs  mod.rs
magic/src/relations/: has_many.rs  macros.rs  mod.rs  traits.rs
magic/src/relations/loaders/: belongs_to.rs  has_many.rs  mod.rs
magic/src/relations/loaders/belongs_to/: lazy.rs
magic/src/relations/loaders/has_many/: eager.rs  lazy.rs  mod.rs
magic/src/relations/runtime/: belongs_to.rs  has_many.rs  mod.rs
magic/src/schema/: create.rs  mod.rs  models.rs  utils.rs
magic/src/traits/: mod.rs  model.rs
magic/tests/: magic_integration.rs
magic_cli/: Cargo.toml
magic_cli/src/: db.rs  main.rs  migrate.rs  model_loader.rs
magic_derive/: Cargo.toml  README.md
magic_derive/src/: attributes.rs  expand.rs  lib.rs  model.rs
magic_derive/src/attrs/: foreign_key.rs  mod.rs
magic_derive/src/codegen/: crud_methods.rs  expand.rs  impl_belongs_to.rs  impl_from_row.rs  impl_has_fk.rs  impl_model.rs  impl_model_meta.rs  mod.rs  registry_method.rs
magic_derive/src/codegen/utils/: json_writer.rs  mod.rs  type_mapping.rs
magic_derive/src/crud/: get.rs  insert.rs  mod.rs  put.rs  select.rs  update.rs
magic_derive/src/generators/: files.rs  implementations.rs  methods.rs  mod.rs
magic_derive/src/generators/utils/: mod.rs  model_meta.rs
magic_derive/src/input/: mod.rs  parser.rs
magic_derive/src/input/attrs/: foreign_key.rs  mod.rs
magic_derive/src/macros/: unwrapper.rs
magic_derive/src/operations/: mod.rs
magic_derive/src/operations/crud/: delete.rs  get.rs  insert.rs  mod.rs  put.rs
magic_derive/src/operations/relations/: belongs_to.rs  has_many.rs  mod.rs
src/: main.rs
src/executor/: mod.rs
tasks/: refactor.md
