[package]
name = "magic_orm"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1"
async-trait = "0.1"
magic_derive = { path = "../magic_derive" }
anyhow = "1.0.102"
paste = "1.0"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
