[package]
name = "magic_derive"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the Magic ORM, providing derive macros for model definitions."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

